--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "express": "^4.15.3",
     "google-cloud": "^0.55.0",
     "moment": "^2.18.1",
+    "node-base64-image": "^1.0.3",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.45.1",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-image-picker": "^0.26.3",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
